--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "│ 41188 │ 74    │ retired     │ married  │ professional.course │ no      │"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final task: Predict Y"
+    "# Final task: Predict Y"
    ]
   },
   {
@@ -121,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 39,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -158,7 +156,7 @@
        " 74  \"retired\"      \"married\"      94.767  -50.8  1.028  4963.6  \"no\" "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +177,7 @@
        "pValues (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +214,7 @@
        "categoricalData (generic function with 1 method)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +245,7 @@
        "binaryData (generic function with 1 method)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,10 +266,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -293,19 +289,19 @@
        " ⋮\n",
        " 0\n",
        " 0\n",
+       " 1\n",
        " 0\n",
        " 0\n",
+       " 1\n",
+       " 0\n",
+       " 1\n",
        " 0\n",
        " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
-       " 0\n",
+       " 1\n",
        " 0"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,10 +334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -363,19 +357,19 @@
        "  ⋮                        ⋮         ⋱                                ⋮  \n",
        " 38.0  1.0  3.0  2.0  1.0  2.0  2.0     94.767  -50.8  1.031  4963.6  0.0\n",
        " 57.0  6.0  1.0  5.0  1.0  2.0  1.0     94.767  -50.8  1.031  4963.6  0.0\n",
-       " 62.0  6.0  1.0  7.0  1.0  1.0  1.0     94.767  -50.8  1.031  4963.6  0.0\n",
+       " 62.0  6.0  1.0  7.0  1.0  1.0  1.0     94.767  -50.8  1.031  4963.6  1.0\n",
        " 64.0  6.0  3.0  5.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
        " 36.0  3.0  1.0  7.0  1.0  1.0  1.0  …  94.767  -50.8  1.028  4963.6  0.0\n",
-       " 37.0  3.0  1.0  7.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
+       " 37.0  3.0  1.0  7.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  1.0\n",
        " 29.0  8.0  2.0  1.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
-       " 73.0  6.0  1.0  5.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
+       " 73.0  6.0  1.0  5.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  1.0\n",
        " 46.0  4.0  1.0  5.0  1.0  1.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
        " 56.0  6.0  1.0  7.0  1.0  2.0  1.0  …  94.767  -50.8  1.028  4963.6  0.0\n",
-       " 44.0  5.0  1.0  5.0  1.0  1.0  1.0     94.767  -50.8  1.028  4963.6  0.0\n",
+       " 44.0  5.0  1.0  5.0  1.0  1.0  1.0     94.767  -50.8  1.028  4963.6  1.0\n",
        " 74.0  6.0  1.0  5.0  1.0  2.0  1.0     94.767  -50.8  1.028  4963.6  0.0"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,6 +377,163 @@
    "source": [
     "# convert matrix to Array float\n",
     "df = convert(Array{Float64},df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2 - 80/20 divisision, standardization, oneMatrix, theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "41188×20 Array{Float64,2}:\n",
+       " -0.234071  -0.281215  -0.281215  -0.281215  …  -0.313273  -0.277909  4.16744\n",
+       " -0.228476  -0.275597  -0.276454  -0.275597     -0.308497  -0.27315   4.17008\n",
+       " -0.248101  -0.278093  -0.27895   -0.278093     -0.310999  -0.275645  4.16845\n",
+       " -0.242404  -0.274099  -0.275812  -0.274099     -0.307849  -0.272508  4.17004\n",
+       " -0.2362    -0.282492  -0.283349  -0.282492     -0.315411  -0.280043  4.16585\n",
+       " -0.240472  -0.277319  -0.278176  -0.275605  …  -0.310224  -0.274871  4.16918\n",
+       " -0.226546  -0.274523  -0.276237  -0.27281      -0.308279  -0.272932  4.17025\n",
+       " -0.244737  -0.276445  -0.279016  -0.274731     -0.311067  -0.275711  4.16875\n",
+       " -0.265609  -0.281892  -0.284463  -0.281892     -0.317372  -0.282014  4.16253\n",
+       " -0.250029  -0.269711  -0.269711  -0.269711     -0.302572  -0.267266  4.17074\n",
+       " -0.237518  -0.269189  -0.271757  -0.267477  …  -0.303771  -0.268456  4.17083\n",
+       " -0.257705  -0.277412  -0.277412  -0.277412     -0.310313  -0.274964  4.16851\n",
+       " -0.250793  -0.272204  -0.273917  -0.273917     -0.306805  -0.27147   4.17021\n",
+       "  ⋮                                          ⋱                               \n",
+       " -0.253756  -0.286877  -0.285086  -0.285981     -0.333246  -0.286849  4.15545\n",
+       " -0.227393  -0.273029  -0.277503  -0.273924     -0.323854  -0.277475  4.16308\n",
+       " -0.196568  -0.247115  -0.251628  -0.246212     -0.298384  -0.2516    4.22772\n",
+       " -0.222712  -0.274625  -0.27731   -0.27552      -0.325464  -0.279075  4.16269\n",
+       " -0.250933  -0.280473  -0.282263  -0.276892  …  -0.328632  -0.282238  4.16001\n",
+       " -0.251308  -0.281745  -0.283536  -0.278165     -0.329908  -0.283511  4.15904\n",
+       " -0.2081    -0.227057  -0.232474  -0.233376     -0.280138  -0.233351  4.24648\n",
+       " -0.223208  -0.283214  -0.287692  -0.28411      -0.334085  -0.287667  4.15686\n",
+       " -0.248138  -0.285738  -0.288423  -0.284842     -0.334797  -0.288398  4.15429\n",
+       " -0.2312    -0.275959  -0.280435  -0.275064  …  -0.326804  -0.280409  4.16194\n",
+       " -0.252466  -0.287373  -0.290953  -0.287373     -0.337316  -0.290928  4.15074\n",
+       " -0.218267  -0.279164  -0.283642  -0.28006      -0.330031  -0.283617  4.1606 "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# x and y\n",
+    "x = df[:,1:20]\n",
+    "y = df[:,21]\n",
+    "# satandardize the x\n",
+    "using StatsBase\n",
+    "dt = fit(ZScoreTransform, x, dims=2)\n",
+    "x = StatsBase.transform(dt,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22-element Array{Float64,1}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ones matrix\n",
+    "oneMatrix = ones(size(x,1))\n",
+    "x = hcat(x,oneMatrix)\n",
+    "# theta\n",
+    "theta = zeros(size(x,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8238×1 Array{Float64,2}:\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " ⋮  \n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.0\n",
+       " 0.0\n",
+       " 1.0\n",
+       " 0.0\n",
+       " 0.0\n",
+       " 1.0\n",
+       " 0.0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 80% for training and 20 % for testing\n",
+    "i = size(x,1)\n",
+    "x_train = x[1:trunc(Int,i * 0.8),:]\n",
+    "x_test = x[trunc(Int,i * 0.8)+1:i,:]\n",
+    "\n",
+    "y_train = y[1:trunc(Int,i * 0.8),:]\n",
+    "y_test = y[trunc(Int,i * 0.8)+1:i,:]"
    ]
   },
   {
